--- a/project3/music.html
+++ b/project3/music.html
@@ -27,19 +27,19 @@
             <div class="album-container in-the-end">
                 <div class="overlay">
                     <a class="spotify" href="https://open.spotify.com/album/6qdWKell3uanKckKAO6rIz?si=go9PHLn1Q9uasSLh9uO35w"><i class="fa-brands fa-spotify" style="color: #ffffff;"></i></a>
-                    <h2 class="album-title">IN THE END IT ALWAYS DOES</h2>
+                    <h2 class="album-title">IN THE END IT ALWAYS DOES<br>2023</h2>
                 </div>
             </div>
             <div class="album-container chewing-cotton">
                 <div class="overlay">
                     <a class="spotify" href="https://open.spotify.com/album/1OlByJ5jsP9Eklfp03Xn8z?si=M5u4l1xURkG_WaUM-m8hNw"><i class="fa-brands fa-spotify" style="color: #ffffff;"></i></a>
-                    <h2 class="album-title">CHEWING COTTON WOOL</h2>
+                    <h2 class="album-title">CHEWING COTTON WOOL<br>2020</h2>
                 </div>
             </div>
             <div class="album-container good-at">
                 <div class="overlay">
                     <a class="spotify" href="https://open.spotify.com/album/3Pa8W1UOD018R21VgOPTYZ?si=8Uj2AzcwT8yfNYu7RqLazw"><i class="fa-brands fa-spotify" style="color: #ffffff;"></i></a>
-                    <h2 class="album-title">GOOD AT FALLING</h2>
+                    <h2 class="album-title">GOOD AT FALLING<br>2019</h2>
                 </div>
             </div>
         </div>
@@ -47,19 +47,19 @@
             <div class="album-container saw-you">
                 <div class="overlay">
                     <a class="spotify" href="https://open.spotify.com/album/1x8SKoPwUTpOfc0w5gBPsk?si=6O8Cj5HoSHizm_Hfy5W1ew"><i class="fa-brands fa-spotify" style="color: #ffffff;"></i></a>
-                    <h2 class="album-title">SAW YOU IN A DREAM</h2>
+                    <h2 class="album-title">SAW YOU IN A DREAM<br>2017</h2>
                 </div>
             </div>
             <div class="album-container swim">
                 <div class="overlay">
                     <a class="spotify" href="https://open.spotify.com/album/73vO13M0C5PUQxSNkpIhoH?si=5BG3gDHVSU2DGhl_6XRycw"><i class="fa-brands fa-spotify" style="color: #ffffff;"></i></a>
-                    <h2 class="album-title">SWIM AGAINST THE TIDE</h2>
+                    <h2 class="album-title">SWIM AGAINST THE TIDE<br>2016</h2>
                 </div>
             </div>
             <div class="album-container clean">
                 <div class="overlay">
                     <a class="spotify" href="https://open.spotify.com/album/4T1o6BUMpITeK7DfE5qZqp?si=RSMFZvLLRDq370Me5RAhJQ"><i class="fa-brands fa-spotify" style="color: #ffffff;"></i></a>
-                    <h2 class="album-title">CLEAN</h2>
+                    <h2 class="album-title">CLEAN<br>2015</h2>
                 </div>
             </div>   
         </div>
@@ -67,7 +67,7 @@
             <div class="album-container pools">
                 <div class="overlay">
                     <a class="spotify" href="https://open.spotify.com/album/4pi0uxZhvg9PuST6tqKeqQ?si=0ad8trmHQfyIjP_PyJiEGA"><i class="fa-brands fa-spotify" style="color: #ffffff;"></i></a>
-                    <h2 class="album-title">POOLS TO BATHE IN</h2>
+                    <h2 class="album-title">POOLS TO BATHE IN<br>2015</h2>
                 </div>
             </div>
         </div>
