--- a/project4/index.html
+++ b/project4/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Zoe Chalk</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/styles.css">
+
+    <title>Greenpeace</title>
 </head>
 <body>
-    <h1>In Progress</h1>
+    <header>
+        <nav>
+            <a>ACTIONS</a>
+            <a>ISSUES</a>
+            <a>DONATE</a>
+            <a>SIGN UP</a>
+        </nav>
+    </header>
+    <section id="landing-img">
+        <video loop muted autoplay>
+            <source src="assets/images/grand-canyon-landscape-time-lapse-2022-08-04-10-49-23-utc.mp4" type="video/mp4">
+        </video>
+        <h1>Greenpeace</h1>
+    </section>
 </body>
 </html>
