added navs, landing vid, card layouyt

--- a/project4/index.html
+++ b/project4/index.html
@@ -7,16 +7,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
-
     <title>Greenpeace</title>
 </head>
 <body>
     <header>
         <nav>
-            <a>ACTIONS</a>
-            <a>ISSUES</a>
-            <a>DONATE</a>
-            <a>SIGN UP</a>
+            <a class="nav-links active" href="index.html">HOME</a>
+            <a class="nav-links" href="actions.html">ACTIONS</a>
+            <a class="nav-links" href="issues.html">ISSUES</a>
+            <a class="nav-links" href="donate.html">DONATE</a>
+            <a class="nav-links" href="signup.html">SIGN UP</a>
         </nav>
     </header>
     <section id="landing-img">
@@ -24,6 +24,11 @@
             <source src="assets/images/grand-canyon-landscape-time-lapse-2022-08-04-10-49-23-utc.mp4" type="video/mp4">
         </video>
         <h1>Greenpeace</h1>
+    </section>
+    <section class="grid-container">
+        <div class="row">
+
+        </div>
     </section>
 </body>
 </html>
