--- a/project4/actions.html
+++ b/project4/actions.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <h2>Greenpeace</h2>
         <nav>
             <a class="nav-links" href="index.html">HOME</a>
             <a class="nav-links active" href="actions.html">ACTIONS</a>
@@ -19,10 +20,39 @@
             <a class="nav-links" href="signup.html">SIGN UP</a>
         </nav>
     </header>
-    <section class="grid-container">
-        <div class="row">
-            
-        </div>
-    </section>
+    <main>
+        <h1>Greenpeace</h1>
+        <section class="grid-container">
+            <div class="row">
+                <div class="card">
+                    <img src="./assets/images/petition.jpg">
+                    <div class="sub-card">
+                        <h2>Petition</h2>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/images/volunteer.jpg">
+                    <div class="sub-card">
+                        <h2>Volunteer</h2>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/images/group-of-protestors-with-placards-and-megaphone-on-2022-03-16-22-18-14-utc.jpg">
+                    <div class="sub-card">
+                        <h2>Protest</h2>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/images/careers.jpg">
+                    <div class="sub-card">
+                        <h2>Careers</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <a class="nav-links" href="mailto:connect@greenpeace.us">Contact Us</a>
+    </footer>
 </body>
 </html>
