--- a/project4/donate.html
+++ b/project4/donate.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <h2>Greenpeace</h2>
         <nav>
             <a class="nav-links" href="index.html">HOME</a>
             <a class="nav-links" href="actions.html">ACTIONS</a>
@@ -19,12 +20,18 @@
             <a class="nav-links" href="signup.html">SIGN UP</a>
         </nav>
     </header>
-    <section >
-        <table>
-            <tr>
-            <th>Donation Options</th>
-            </tr>
-        </table>
-    </section>
+    <main>
+        <h1>Greenpeace</h1>
+        <section>
+            <table>
+                <tr>
+                <th>Donation Options</th>
+                </tr>
+            </table>
+        </section>
+    </main>
+    <footer>
+        <a class="nav-links" href="mailto:connect@greenpeace.us">Contact Us</a>
+    </footer>
 </body>
 </html>
