--- a/project4/index.html
+++ b/project4/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <h2>Greenpeace</h2>
         <nav>
             <a class="nav-links active" href="index.html">HOME</a>
             <a class="nav-links" href="actions.html">ACTIONS</a>
@@ -19,16 +20,21 @@
             <a class="nav-links" href="signup.html">SIGN UP</a>
         </nav>
     </header>
-    <section id="landing-img">
-        <video loop muted autoplay>
-            <source src="assets/images/grand-canyon-landscape-time-lapse-2022-08-04-10-49-23-utc.mp4" type="video/mp4">
-        </video>
-        <h1>Greenpeace</h1>
-    </section>
-    <section class="grid-container">
-        <div class="row">
+    <main>
+        <section id="landing-img">
+            <video loop muted autoplay>
+                <source src="assets/images/grand-canyon-landscape-time-lapse-2022-08-04-10-49-23-utc.mp4" type="video/mp4">
+            </video>
+            <h1>Greenpeace</h1>
+        </section>
+        <section class="grid-container">
+            <div class="row">
 
-        </div>
-    </section>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <a class="nav-links" href="mailto:connect@greenpeace.us">Contact Us</a>
+    </footer>
 </body>
 </html>
