--- a/project4/signup.html
+++ b/project4/signup.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <h2>Greenpeace</h2>
         <nav>
             <a class="nav-links" href="index.html">HOME</a>
             <a class="nav-links" href="actions.html">ACTIONS</a>
@@ -19,10 +20,37 @@
             <a class="nav-links active" href="signup.html">SIGN UP</a>
         </nav>
     </header>
-    <section class="grid-container">
-        <div class="row">
-            
-        </div>
-    </section>
+    <main>
+        <h1>Greenpeace</h1>
+        <section class="grid-container">
+            <div class="row">
+                <div class="card">
+                    <form>
+                        <h2>Signup</h2>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="you@email.com"/>
+                        <label for="password">Password</label>
+                        <input type="text" id="password" name="password" placeholder="password"/>
+                        <label for="password-ver">Password Verification</label>
+                        <input type="text" id="password-ver" name="password-ver" placeholder="repeat password"/>
+                        <input type="submit"/>
+                    </form>
+                </div>
+                <div class="card">
+                    <form>
+                        <h2>Login</h2>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="you@email.com"/>
+                        <label for="password">Password</label>
+                        <input type="text" id="password" name="password" placeholder="password"/>
+                        <input type="submit"/>
+                    </form>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <a class="nav-links" href="mailto:connect@greenpeace.us">Contact Us</a>
+    </footer>
 </body>
 </html>
