--- a/project4/issues.html
+++ b/project4/issues.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <h2>Greenpeace</h2>
         <nav>
             <a class="nav-links" href="index.html">HOME</a>
             <a class="nav-links" href="actions.html">ACTIONS</a>
@@ -19,28 +20,33 @@
             <a class="nav-links" href="signup.html">SIGN UP</a>
         </nav>
     </header>
-    <hr>
-    <section class="grid-container">
-        <div class="row">
-            <div class="card">
-                <img src="./assets/images/seychelles-picturesque-coastline-with-granite-rock-2021-08-30-02-23-21-utc.jpg">
-                <div class="sub-card">
-                    <h2>Climate</h2>
+    <main>
+        <h1>Greenpeace</h1>
+        <section class="grid-container">
+            <div class="row">
+                <div class="card">
+                    <img src="./assets/images/seychelles-picturesque-coastline-with-granite-rock-2021-08-30-02-23-21-utc.jpg">
+                    <div class="sub-card">
+                        <h2>Climate</h2>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/images/ukrainian-war-refugees-in-temporary-shelter-and-he-2022-03-30-00-08-21-utc.jpg">
+                    <div class="sub-card">
+                        <h2>Humans</h2>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/images/beautiful-eurasian-lynx-sitting-in-the-forest-at-e-2022-12-16-10-00-44-utc.jpg">
+                    <div class="sub-card">
+                        <h2>Animals</h2>
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <img src="./assets/images/ukrainian-war-refugees-in-temporary-shelter-and-he-2022-03-30-00-08-21-utc.jpg">
-                <div class="sub-card">
-                    <h2>Humans</h2>
-                </div>
-            </div>
-            <div class="card">
-                <img src="./assets/images/beautiful-eurasian-lynx-sitting-in-the-forest-at-e-2022-12-16-10-00-44-utc.jpg">
-                <div class="sub-card">
-                    <h2>Animals</h2>
-                </div>
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
+    <footer>
+        <a class="nav-links" href="mailto:connect@greenpeace.us">Contact Us</a>
+    </footer>
 </body>
 </html>
