--- a/project4/donate.html
+++ b/project4/donate.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link rel="icon" href="assets/images/logo.png" type="image/png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Greenpeace</title>
 </head>
@@ -22,10 +23,47 @@
     </header>
     <main>
         <h1>Greenpeace</h1>
-        <section>
+        <section id="table-container">
+            <h2 id="table-header">Donation Options</h2>
             <table>
                 <tr>
-                <th>Donation Options</th>
+                    <th>Monthly</th>
+                    <th>Annual</th>
+                    <th>One Time</th>
+                </tr>
+                <tr>
+                    <td>Donate once a month, cancel anytime.</td>
+                    <td>Donate once a year, cancel anytime.</td>
+                    <td>One time donation.</td>
+                </tr>
+                <tr>
+                    <td>
+                        <ul>
+                            <li>One time merch pick.</li>
+                            <li>Priority for volunteer events</li>
+                            <li>Annual bumper sticker packs</li>
+                            <li>Receipt for tax purposes</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Priority for volunteer events</li>
+                            <li>Annual bumper sticker packs</li>
+                            <li>Receipt for tax purposes</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Priority for volunteer events</li>
+                            <li>One time bumper sticker pack</li>
+                            <li>Receipt for tax purposes</li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td><button>Donate Now</button></td>
+                    <td><button>Donate Now</button></td>
+                    <td><button>Donate Now</button></td>
                 </tr>
             </table>
         </section>
