--- a/project4/index.html
+++ b/project4/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link rel="icon" href="assets/images/logo.png" type="image/png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Greenpeace</title>
 </head>
@@ -21,15 +22,36 @@
         </nav>
     </header>
     <main>
-        <section id="landing-img">
+        <a id="landing-img" href="https://www.greenpeace.org/usa/">
             <video loop muted autoplay>
                 <source src="assets/images/grand-canyon-landscape-time-lapse-2022-08-04-10-49-23-utc.mp4" type="video/mp4">
             </video>
             <h1>Greenpeace</h1>
-        </section>
+        </a>
+        <hr>
         <section class="grid-container">
             <div class="row">
-
+                <div class="card1">
+                    <img src="./assets/images/rainbow.jpg">
+                    <div class="sub-card1">
+                        <h2>Who we are</h2>
+                        <p>Greenpeace is a global network of independent campaigning organizations that use peaceful protest and creative communication to expose global environmental problems and promote solutions that are essential to a green and peaceful future.</p>
+                    </div>
+                </div>
+                <div class="card1">
+                    <img src="./assets/images/boat.jpg">
+                    <div class="sub-card1">
+                        <h2>What we do</h2>
+                        <p>Our fight to save the planet and its people has grown more serious— devastating impacts of climate change; an extractivist, racist, and inequitable economy; destruction of ancient forests; and the deterioration of our oceans continue to loom large.</p>
+                    </div>
+                </div>
+                <div class="card1">
+                    <img src="./assets/images/protest.jpg">
+                    <div class="sub-card1">
+                        <h2>How we fight</h2>
+                        <p>Greenpeace does not solicit contributions from government or corporations, nor will we endorse political candidates. Over 3 million Greenpeacers like you provide virtually all of our funding through individual contributions.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
