--- a/project4/signup.html
+++ b/project4/signup.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link rel="icon" href="assets/images/logo.png" type="image/png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Greenpeace</title>
 </head>
@@ -27,23 +28,23 @@
                 <div class="card">
                     <form>
                         <h2>Signup</h2>
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" placeholder="you@email.com"/>
-                        <label for="password">Password</label>
-                        <input type="text" id="password" name="password" placeholder="password"/>
+                        <label for="email-s">Email</label>
+                        <input type="email" id="email-s" name="email-s" placeholder="you@email.com"/>
+                        <label for="password-s">Password</label>
+                        <input type="text" id="password-s" name="password-s" placeholder="password"/>
                         <label for="password-ver">Password Verification</label>
                         <input type="text" id="password-ver" name="password-ver" placeholder="repeat password"/>
-                        <input type="submit"/>
+                        <input class="submit" type="submit"/>
                     </form>
                 </div>
                 <div class="card">
                     <form>
                         <h2>Login</h2>
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" placeholder="you@email.com"/>
-                        <label for="password">Password</label>
-                        <input type="text" id="password" name="password" placeholder="password"/>
-                        <input type="submit"/>
+                        <label for="email-l">Email</label>
+                        <input type="email" id="email-l" name="email-l" placeholder="you@email.com"/>
+                        <label for="password-l">Password</label>
+                        <input type="text" id="password-l" name="password-l" placeholder="password"/>
+                        <input class="submit" type="submit"/>
                     </form>
                 </div>
             </div>
