--- a/project4/signup.html
+++ b/project4/signup.html
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="card">
                     <form>
-                        <h2>Signup</h2>
+                        <h2 class="form-title">Signup</h2>
                         <label for="email-s">Email</label>
                         <input type="email" id="email-s" name="email-s" placeholder="you@email.com"/>
                         <label for="password-s">Password</label>
@@ -39,7 +39,7 @@
                 </div>
                 <div class="card">
                     <form>
-                        <h2>Login</h2>
+                        <h2 class="form-title">Login</h2>
                         <label for="email-l">Email</label>
                         <input type="email" id="email-l" name="email-l" placeholder="you@email.com"/>
                         <label for="password-l">Password</label>
