--- a/project4/actions.html
+++ b/project4/actions.html
@@ -26,19 +26,19 @@
         <section class="grid-container">
             <div class="row">
                 <div class="card">
-                    <img src="./assets/images/petition.jpg">
+                    <img src="./assets/images/petition.jpg" alt="signing petition">
                     <div class="sub-card">
                         <h2>Petition</h2>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./assets/images/volunteer.jpg">
+                    <img src="./assets/images/volunteer.jpg" alt="volunteer cleanup workers">
                     <div class="sub-card">
                         <h2>Volunteer</h2>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./assets/images/group-of-protestors-with-placards-and-megaphone-on-2022-03-16-22-18-14-utc.jpg">
+                    <img src="./assets/images/group-of-protestors-with-placards-and-megaphone-on-2022-03-16-22-18-14-utc.jpg" alt="protestors">
                     <div class="sub-card">
                         <h2>Protest</h2>
                     </div>
