--- a/project4/index.html
+++ b/project4/index.html
@@ -32,21 +32,21 @@
         <section class="grid-container">
             <div class="row">
                 <div class="card1">
-                    <img src="./assets/images/rainbow.jpg">
+                    <img src="./assets/images/rainbow.jpg" alt="rainbow warrior">
                     <div class="sub-card1">
                         <h2>Who we are</h2>
                         <p>Greenpeace is a global network of independent campaigning organizations that use peaceful protest and creative communication to expose global environmental problems and promote solutions that are essential to a green and peaceful future.</p>
                     </div>
                 </div>
                 <div class="card1">
-                    <img src="./assets/images/boat.jpg">
+                    <img src="./assets/images/boat.jpg" alt="greenpeace boat">
                     <div class="sub-card1">
                         <h2>What we do</h2>
                         <p>Our fight to save the planet and its people has grown more serious— devastating impacts of climate change; an extractivist, racist, and inequitable economy; destruction of ancient forests; and the deterioration of our oceans continue to loom large.</p>
                     </div>
                 </div>
                 <div class="card1">
-                    <img src="./assets/images/protest.jpg">
+                    <img src="./assets/images/protest.jpg" alt="greenpeace protestors">
                     <div class="sub-card1">
                         <h2>How we fight</h2>
                         <p>Greenpeace does not solicit contributions from government or corporations, nor will we endorse political candidates. Over 3 million Greenpeacers like you provide virtually all of our funding through individual contributions.</p>
