--- a/project4/issues.html
+++ b/project4/issues.html
@@ -26,19 +26,19 @@
         <section class="grid-container">
             <div class="row">
                 <div class="card">
-                    <img src="./assets/images/seychelles-picturesque-coastline-with-granite-rock-2021-08-30-02-23-21-utc.jpg">
+                    <img src="./assets/images/seychelles-picturesque-coastline-with-granite-rock-2021-08-30-02-23-21-utc.jpg" alt="rocky beach">
                     <div class="sub-card">
                         <h2>Climate</h2>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./assets/images/ukrainian-war-refugees-in-temporary-shelter-and-he-2022-03-30-00-08-21-utc.jpg">
+                    <img src="./assets/images/ukrainian-war-refugees-in-temporary-shelter-and-he-2022-03-30-00-08-21-utc.jpg" alt="ukrainian war refugees">
                     <div class="sub-card">
                         <h2>Humans</h2>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./assets/images/beautiful-eurasian-lynx-sitting-in-the-forest-at-e-2022-12-16-10-00-44-utc.jpg">
+                    <img src="./assets/images/beautiful-eurasian-lynx-sitting-in-the-forest-at-e-2022-12-16-10-00-44-utc.jpg" alt="snow lynx">
                     <div class="sub-card">
                         <h2>Animals</h2>
                     </div>
