--- a/project4/actions.html
+++ b/project4/actions.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./assets/images/careers.jpg">
+                    <img src="./assets/images/careers.jpg" alt="environmental cleanup workers">
                     <div class="sub-card">
                         <h2>Careers</h2>
                     </div>
